# libminecraft

./: .gitignore  CMakeLists.txt
example/classic/: CMakeLists.txt  command.cpp  command.hpp  main.cpp  myclassicclient.cpp  myclassicclient.hpp
example/classic/command/: cuboid.cpp  cuboid.hpp
example/mainline/: CMakeLists.txt  main.cpp  mymainlineclient.cpp  mymainlineclient.hpp
src/: .gitignore  CMakeLists.txt
src/libminecraft/: CMakeLists.txt  libminecraft.hpp
src/libminecraft/classic/: client.cpp  client.hpp  game.cpp  game.hpp  mctypes.hpp  session.cpp  session.hpp
src/libminecraft/classic/game/: base.hpp  map.cpp  map.hpp  player.cpp  player.hpp  world.cpp  world.hpp
src/libminecraft/classic/game/map/: block.cpp  block.hpp  cell.cpp  cell.hpp  point.cpp  point.hpp
src/libminecraft/classic/game/player/: local.cpp  local.hpp
src/libminecraft/classic/protocol/: client.cpp  client.hpp  packet.hpp  protocol.hpp  stream.cpp  stream.hpp
src/libminecraft/classic/protocol/client/: packet.hpp  protocol.cpp  protocol.hpp
src/libminecraft/classic/protocol/server/: packet.hpp  protocol.cpp  protocol.hpp
src/libminecraft/classic/session/: info.cpp  info.hpp  remote.cpp  remote.hpp
src/libminecraft/classic/session/remote/: connection.cpp  connection.hpp  state.hpp  statemachine.cpp  statemachine.hpp
src/libminecraft/core/: minecraftsession.cpp  minecraftsession.hpp  minecraftworld.cpp  minecraftworld.hpp
src/libminecraft/core/classic/: minecraftworld.cpp  minecraftworld.hpp
src/libminecraft/core/classic/net/: clientstatemachine.hpp  clistate.hpp
src/libminecraft/core/classic/protocol/: mctypes.hpp  packet.hpp  stream.hpp
src/libminecraft/core/classic/world/: map.hpp  player.cpp  player.hpp
src/libminecraft/core/client/: clientstatemachine.cpp  clientstatemachine.hpp  clistate.hpp
src/libminecraft/core/client/state/: cliconnecting.cpp  cliconnecting.hpp  clidisconnected.cpp  clidisconnected.hpp  cligame.cpp  cligame.hpp  cliloadingmap.cpp  cliloadingmap.hpp  clinegotiating.cpp  clinegotiating.hpp  clistate.hpp
src/libminecraft/core/mainline/protocol/: mctypes.hpp  packet.hpp  protocol.hpp  stream.cpp  stream.hpp
src/libminecraft/core/map/: map.cpp  map.hpp  mapcell.cpp  mapcell.hpp
src/libminecraft/core/player/: player.cpp  player.hpp
src/libminecraft/core/protocol/: baseprotocol.cpp  baseprotocol.hpp  clientprotocol.cpp  clientprotocol.hpp  mctypes.hpp  minecraftpacket.hpp  minecraftstream.cpp  minecraftstream.hpp  minecraftstring.cpp  minecraftstring.hpp  minecrafttypes.hpp  networktypes.hpp  packet.hpp  protocol.hpp  serverprotocol.cpp  serverprotocol.hpp  stream.cpp  stream.hpp
src/libminecraft/core/protocol/classic/: client.cpp  client.hpp  mctypes.hpp  packet.hpp  protocol.cpp  protocol.hpp  stream.cpp  stream.hpp
src/libminecraft/core/protocol/client/: clientidentpkt.cpp  clientidentpkt.hpp  clientmessagepkt.cpp  clientmessagepkt.hpp  clientpkt.cpp  clientpkt.hpp  clientposdirpkt.cpp  clientposdirpkt.hpp  clientsetblockpkt.cpp  clientsetblockpkt.hpp
src/libminecraft/core/protocol/mainline/: client.cpp  client.hpp  mctypes.hpp  packet.hpp  protocol.cpp  protocol.hpp  stream.cpp  stream.hpp
src/libminecraft/core/protocol/server/: serveridentpkt.cpp  serveridentpkt.hpp  serverlevelbeginpkt.cpp  serverlevelbeginpkt.hpp  serverlevelchunkpkt.cpp  serverlevelchunkpkt.hpp  serverleveldonepkt.cpp  serverleveldonepkt.hpp  servermessagepkt.cpp  servermessagepkt.hpp  serverpingpkt.cpp  serverpingpkt.hpp  serverpkt.cpp  serverpkt.hpp  serverplayerdespawnpkt.cpp  serverplayerdespawnpkt.hpp  serverplayerdirpkt.cpp  serverplayerdirpkt.hpp  serverplayerdisconnectpkt.cpp  serverplayerdisconnectpkt.hpp  serverplayeroppkt.cpp  serverplayeroppkt.hpp  serverplayerposdirpkt.cpp  serverplayerposdirpkt.hpp  serverplayerpospkt.cpp  serverplayerpospkt.hpp  serverplayerspawnpkt.cpp  serverplayerspawnpkt.hpp  serverplayerteleportpkt.cpp  serverplayerteleportpkt.hpp  serversetblockpkt.cpp  serversetblockpkt.hpp
src/libminecraft/core/shared/exception/: loginexception.cpp  mapexception.cpp  minecraftexception.hpp  networkexception.cpp  networkexception.hpp  protocolexception.hpp
src/libminecraft/core/shared/protocol/: mctypes.hpp  packet.hpp  protocol.hpp  stream.cpp  stream.hpp
src/libminecraft/exceptions/: loginexception.hpp  mapexception.hpp  minecraftexception.cpp  minecraftexception.hpp  networkexception.hpp  protocolexception.cpp  protocolexception.hpp
src/libminecraft/interfaces/: clienteventhandler.cpp  clienteventhandler.hpp
src/libminecraft/mainline/: client.cpp  client.hpp  mctypes.hpp  session.cpp  session.hpp
src/libminecraft/mainline/game/: base.hpp  player.cpp  player.hpp
src/libminecraft/mainline/protocol/: client.cpp  client.hpp  packet.hpp  protocol.hpp  stream.cpp  stream.hpp
src/libminecraft/mainline/protocol/client/: packet.hpp  protocol.cpp  protocol.hpp
src/libminecraft/mainline/protocol/packet/: login.cpp  login.hpp  message.cpp  message.hpp  playerposdir.cpp  playerposdir.hpp
src/libminecraft/mainline/session/: info.cpp  info.hpp  remote.cpp  remote.hpp
src/libminecraft/session/: minecraftsession.cpp  minecraftsession.hpp  remotesession.cpp  remotesession.hpp
src/libminecraft/shared/: exception.cpp  exception.hpp  mctypes.hpp
src/libminecraft/shared/exception/: login.cpp  login.hpp  map.cpp  map.hpp  network.cpp  network.hpp  protocol.cpp  protocol.hpp
src/libminecraft/shared/protocol/: packet.hpp  protocol.hpp  stream.hpp
src/libminecraft/support/fsm/: abstractstate.hpp  abstractstatemachine.hpp  actionstate.hpp  actionstatemachine.hpp
src/libminecraft/support/io/: stream.hpp
src/libminecraft/support/java/: jtypes.hpp
src/libminecraft/utils/: mcstring.cpp  mcstring.hpp
src/test/: CMakeLists.txt  main.cpp  myminecraftclient.cpp  myminecraftclient.hpp
src/test/classic/: CMakeLists.txt  command.cpp  command.hpp  main.cpp  myclassicclient.cpp  myclassicclient.hpp
src/test/classic/command/: cuboid.cpp  cuboid.hpp
src/test/mainline/: CMakeLists.txt  main.cpp  mymainlineclient.cpp  mymainlineclient.hpp
(+286 files in other folders)
